--- a/index.html
+++ b/index.html
@@ -36,6 +36,32 @@ Select ONE Additional Feature to Add
       <li>John Bonmham</li>
       <li>John Paul Jones</li>
     </ul>
-    
+    <h3>
+      <i>My Favorite Songs:</i>
+    </h3>
+    <ol>
+      <li>Babe I'm Gonna Leave You</li>
+      <li>Since I've Been Loving You</li>
+      <li>All My Love</li>
+      <li>Stairway to Heaven</li>
+      <li>Tangerine</li>
+    </ol>
+    <h3>
+      <i>Cool Album Covers 💿: </i>
+    </h3>
+    <img
+      src="https://townsquare.media/site/295/files/2018/08/zeppelin.jpg"
+      width="300"
+    />
+    <h3>
+      <i>Awards 🏆 :</i>
+    </h3>
+    <p>
+      Led Zeppelin has recieved a total of 11 awards, including a Grammy,
+      American Music Award, and the NME Award.
+    </p>
+    <img
+      src="https://newsimg.bbc.co.uk/media/images/40690000/jpg/_40690241_grammy_led203.jpg"
+    />
   </body>
 </html>
