📫📡 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Select ONE Additional Feature to Add
       <i>Awards 🏆 :</i>
     </h3>
     <p>
-      Led Zeppelin has recieved a total of 11 awards, including a Grammy,
+      <b>Led Zeppelin  </b>has recieved a total of 11 awards, including a Grammy,
       American Music Award, and the NME Award.
     </p>
     <img
