🦥🔭 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@ Select ONE Additional Feature to Add
       <i>Awards 🏆 :</i>
     </h3>
     <p>
-      <b>Led Zeppelin  </b>has recieved a total of 11 awards, including a Grammy,
-      American Music Award, and the NME Award.
+      <b>Led Zeppelin </b>has recieved a total of <b> 11 </b> awards, including
+      a Grammy, American Music Award, and the NME Award.
     </p>
     <img
       src="https://newsimg.bbc.co.uk/media/images/40690000/jpg/_40690241_grammy_led203.jpg"
